--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -11,3 +11,64 @@
 .text-20{
     font-size: 20px;
 }
+
+/* Loader CSS */
+
+
+.loader_overlay{
+	display: none;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background: #fff;
+	z-index: 10000;
+	opacity: 0.7;
+}
+
+.loader{
+	width: 150px;
+	height: 150px;
+	border-radius: 50%;
+	border: 10px solid #333;
+	position: relative;
+	top: 30%;
+	left: 45%;
+	animation: loader 2s linear infinite;
+}
+
+@keyframes loader {
+	50%{
+		opacity: 0.5;
+	}
+	100%{
+		transform: rotate(360deg);
+		-webkit-transform: rotate(360deg);
+		-moz-transform: rotate(360deg);
+		-ms-transform: rotate(360deg);
+		-o-transform: rotate(360deg);
+	}
+}
+
+.loader::after{
+	content: "";
+	width: 35px;
+	height: 35px;
+	background: #333;
+	position: absolute;
+	border-radius: 50%;
+	top: -20px;
+	left: 55px;
+}
+
+.loader::before{
+	content: "";
+	width: 0px;
+	height: 0px;
+	border-left: 15px solid transparent;
+	border-right: 15px solid transparent;
+	border-bottom: 15px solid #333;
+	position: absolute;
+	transform: rotate(-90deg);
+	top: -10px;
+	left: 39px;
+}
